tooling/nargo_cli/tests/snapshots/compile_failure/orphaned_trait_impl/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: MyTrait is private and not visible from the current module
  ┌─ src/main.nr:1:14
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │              ------- MyTrait is private
  │

warning: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:1:34
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                                  -------- MyStruct is private
  │

warning: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:1:34
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                                  -------- MyStruct is private
  │

warning: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:1:34
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                                  -------- MyStruct is private
  │

error: Orphaned trait implementation
  ┌─ src/main.nr:1:26
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                          ---------------- Either the type or the trait must be from the same crate as the trait implementation
  │

Aborting due to 1 previous error
