tooling/nargo_cli/tests/snapshots/compile_failure/orphaned_trait_impl/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: MyTrait is private and not visible from the current module
  ┌─ src/main.nr:1:14
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │              ------- MyTrait is private
  │

error: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:1:34
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                                  -------- MyStruct is private
  │

error: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:1:34
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                                  -------- MyStruct is private
  │

error: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:1:34
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                                  -------- MyStruct is private
  │

error: Orphaned trait implementation
  ┌─ src/main.nr:1:26
  │
1 │ impl crate1::MyTrait for crate2::MyStruct {
  │                          ---------------- Either the type or the trait must be from the same crate as the trait implementation
  │

Aborting due to 5 previous errors
